--- a/config.toml
+++ b/config.toml
@@ -20,5 +20,5 @@ patches-source = "inotia00/revanced-patches"
 cli-source = "inotia00/revanced-cli"
 rv-brand = "ReVanced Extended"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/redditinc/reddit/"
-uptodown-dlurl = "https://reddit-official-app.en.uptodown.com/android"
+apkmirror-dpi = "120-640dpi" 
 # archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.reddit.frontpage"
